--- a/src/assets/styles/cmps/home.scss
+++ b/src/assets/styles/cmps/home.scss
@@ -1,6 +1,18 @@
 .home {
     align-items: center;
 
+    .fade-enter-from {
+        opacity: 0;
+    }
+
+    .fade-enter-to {
+        opacity: 1;
+    }
+
+    .fade-enter-active {
+        transition: opacity 3s;
+    }
+
     >* {
         padding-bottom: 100px;
     }
@@ -45,6 +57,21 @@
     .main-features {
         flex-wrap: wrap;
         padding-block-end: 150px;
+
+        .slide-left-enter-from {
+            transform: translateX(-300px);
+            opacity: 0;
+        }
+
+        .slide-right-enter-from {
+            transform: translateX(300px);
+            opacity: 0;
+        }
+
+        .slide-right-enter-active,
+        .slide-left-enter-active {
+            transition: 3s;
+        }
 
         .main-feature {
             max-width: 50%;
@@ -181,7 +208,7 @@
     .stay-productive {
 
         >* {
-            max-width: 50%;
+            // max-width: 50%;
         }
 
     }
