--- a/src/assets/styles/cmps/home.scss
+++ b/src/assets/styles/cmps/home.scss
@@ -207,9 +207,9 @@
 @media (max-width: 900px) {
     .stay-productive {
 
-        >* {
-            // max-width: 50%;
-        }
+        // >* {
+        //     // max-width: 50%;
+        // }
 
     }
 }
