--- a/src/assets/styles/cmps/header.scss
+++ b/src/assets/styles/cmps/header.scss
@@ -2,6 +2,10 @@
     font-size: 16px;
     padding-block: 70px;
 
+    .checkout {
+        align-self: center;
+    }
+
     a:not(:last-child) {
         padding-right: 10px;
     }
@@ -10,6 +14,7 @@
 @media (max-width: 600px) {
     .header {
         padding-inline: 25px;
+        gap: 20px;
 
         img {
             max-width: 80px;
